Turned on gated clock conversion to meet timing.

--- a/src/fpga/bootloader/radiant/MsfReference1.sty
+++ b/src/fpga/bootloader/radiant/MsfReference1.sty
@@ -206,7 +206,7 @@
     <Property name="PROP_SYNSTA_ReportFormat" value="Lattice Standard" time="0"/>
     <Property name="PROP_SYNSTA_ReportSDC" value="False" time="0"/>
     <Property name="PROP_SYNSTA_UnconstrainedPathsNumber" value="10" time="0"/>
-    <Property name="PROP_SYN_ClockConversion" value="False" time="0"/>
+    <Property name="PROP_SYN_ClockConversion" value="True" time="0"/>
     <Property name="PROP_SYN_CmdLineArgs" value="" time="0"/>
     <Property name="PROP_SYN_DisableRegisterRep" value="False" time="0"/>
     <Property name="PROP_SYN_EdfAllowDUPMod" value="False" time="0"/>
