Switched from LSE to Synplify and found that the multiplexers now work, for some reason.  No code change.  No warnings on the net being pruned.  Very odd.

--- a/src/fpga/src/radiant/Default.sty
+++ b/src/fpga/src/radiant/Default.sty
@@ -206,15 +206,15 @@
     <Property name="PROP_SYNSTA_ReportFormat" value="Lattice Standard" time="0"/>
     <Property name="PROP_SYNSTA_ReportSDC" value="False" time="0"/>
     <Property name="PROP_SYNSTA_UnconstrainedPathsNumber" value="10" time="0"/>
-    <Property name="PROP_SYN_ClockConversion" value="False" time="0"/>
+    <Property name="PROP_SYN_ClockConversion" value="True" time="0"/>
     <Property name="PROP_SYN_CmdLineArgs" value="" time="0"/>
     <Property name="PROP_SYN_DisableRegisterRep" value="False" time="0"/>
     <Property name="PROP_SYN_EdfAllowDUPMod" value="False" time="0"/>
-    <Property name="PROP_SYN_EdfArea" value="False" time="0"/>
+    <Property name="PROP_SYN_EdfArea" value="True" time="0"/>
     <Property name="PROP_SYN_EdfArrangeVHDLFiles" value="True" time="0"/>
     <Property name="PROP_SYN_EdfDefEnumEncode" value="Default" time="0"/>
-    <Property name="PROP_SYN_EdfFanout" value="1000" time="0"/>
-    <Property name="PROP_SYN_EdfFrequency" value="200" time="0"/>
+    <Property name="PROP_SYN_EdfFanout" value="200" time="0"/>
+    <Property name="PROP_SYN_EdfFrequency" value="50" time="0"/>
     <Property name="PROP_SYN_EdfGSR" value="Auto" time="0"/>
     <Property name="PROP_SYN_EdfInsertIO" value="False" time="0"/>
     <Property name="PROP_SYN_EdfNumCritPath" value="" time="0"/>
@@ -222,7 +222,7 @@
     <Property name="PROP_SYN_EdfOutNetForm" value="None" time="0"/>
     <Property name="PROP_SYN_EdfPushTirstates" value="True" time="0"/>
     <Property name="PROP_SYN_EdfResSharing" value="True" time="0"/>
-    <Property name="PROP_SYN_EdfRunRetiming" value="Pipelining Only" time="0"/>
+    <Property name="PROP_SYN_EdfRunRetiming" value="Pipelining and Retiming" time="0"/>
     <Property name="PROP_SYN_EdfSymFSM" value="True" time="0"/>
     <Property name="PROP_SYN_EdfUnconsClk" value="False" time="0"/>
     <Property name="PROP_SYN_EdfVerilogInput" value="Verilog 2001" time="0"/>
